# NanoTTS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  PROVENANCE.md  README.md  setup.sh
.github/workflows/: ci.yml
cmake/: idttsConfig.cmake.in  nanottsConfig.cmake.in
docs/: ADDING_AN_OUTPUT.md  ADDING_A_LANGUAGE.md  API.md  DESIGN.md  INTELLIGIBILITY.md  IPA_PROFILE.md  LANGUAGES.md  OUTPUTS.md  PORTING.md  VALIDATION.md
examples/: mcu_callback.c  nanotts_language_select.c  nanotts_mcu_callback.c  nanotts_mcu_pwm.c
include/idtts/: idtts.h
include/nanotts/: nanotts.h  nanotts_languages.def
src/: idtts.c  idtts_g2p.c  idtts_internal.h  idtts_ipa.c  idtts_synth.c  idtts_voice.c  nanotts.c  nanotts_internal.h  nanotts_ipa.c  nanotts_language.c  nanotts_prosody.c  nanotts_synth.c  nanotts_voice.c
src/lang/: README.md  nanotts_lang_common.c  nanotts_lang_common.h  nanotts_lang_es.c  nanotts_lang_haw.c  nanotts_lang_id.c  nanotts_lang_mi.c  nanotts_lang_ms.c  nanotts_lang_polynesian.c  nanotts_lang_polynesian.h  nanotts_lang_sw.c  nanotts_lang_template.c.example
tests/: test_api.c  test_g2p.c  test_ipa.c  test_languages.c  test_pcm.c  test_pwm.c  test_synth.c
tests/data/: es_smoke.txt  haw_smoke.txt  id_intelligibility.tsv  id_intelligibility.txt  id_smoke.txt  mi_smoke.txt  ms_smoke.txt  sw_smoke.txt
tools/: check_espeak_ipa.py  check_text_corpus.py  evaluate_intelligibility.py  idtts_cli.c  nanotts_cli.c
